@@ -12,8 +12,12 @@ import somen440.hossi.usecases.fruits.list.FruitListUseCase;
 import javax.inject.Inject;
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
+import java.util.Collections;
+import java.util.Collections.*;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Path("/fruits")
 @Consumes(MediaType.APPLICATION_JSON)
@@ -46,8 +50,6 @@ public class FruitResource {
         }
     }
 
-    public static class FruitListRequest {}
-
     public static class FruitListResponse {
 
         public Set<Fruit> fruits;
@@ -60,11 +62,11 @@ public class FruitResource {
     }
 
     @GET
-    public FruitListResponse list(FruitListRequest req) {
+    public FruitListResponse list() {
         final var input = new FruitListInputData();
         final var fruits = this.fruitListUseCase.handle(input).fruits.stream().map(
                 fruitData -> new Fruit(fruitData.id, fruitData.name, fruitData.description)
-        ).toList();
+        ).collect(Collectors.toList());
 
         LOG.info(String.format("list size=%d", fruits.size()));
 
